# vitreoretinal-robot

./: README.md
4k_tip_prediction/: README.md
4k_tip_prediction/programs/: 5_test.py  auto.py  (+6 more)
catkin_ws/src/robot_control/: CMakeLists.txt  package.xml
catkin_ws/src/robot_control/cfg/: aisp_vs050_1.yaml  aisp_vs050_2.yaml  arduino_contact_reporter.yaml  cal_aisp_vs050_1.yaml  cal_aisp_vs050_2.yaml  sas_escon_controller.yaml  sas_operator_side_receiver.yaml  sas_patient_side_manager.yaml  sas_robot_driver_6dof_denso_vs050_2.yaml  sas_robot_driver_denso_vs050_1.yaml  sas_robot_driver_denso_vs050_2.yaml  sim_aisp_vs050_1.yaml  sim_aisp_vs050_2.yaml  sim_forceps_attachment_robot.yaml  vitreoretinal_kinematics.yaml
catkin_ws/src/robot_control/launch/: forceps_test.launch  image_processing_node.launch  run_real_vs050_pair.launch  run_semi_autonomous_teleoperation.launch  run_simulation_vs050_pair.launch  run_teleoperation.launch  set_rcm_positions.launch
catkin_ws/src/robot_control/launch/IJMRCAS/: practice_phantom.launch
catkin_ws/src/robot_control/launch/IROS2023/: eyeball_manipulation_manipulability_simulation.launch
catkin_ws/src/robot_control/launch/arduino/: arduino_contact_reporter.launch
catkin_ws/src/robot_control/launch/image/: ROI_predict_node.launch  keypoint_predict_node.launch  simple_image_capture.launch
catkin_ws/src/robot_control/launch/real/: sas_robot_driver_6dof_denso_vs050_2.launch  sas_robot_driver_denso_vs050_1.launch  sas_robot_driver_denso_vs050_2.launch  sas_robot_driver_escon.launch
catkin_ws/src/robot_control/launch/setting/: eject_instruments.launch  return_to_initial_poses.launch  return_to_initial_poses_orbital.launch
catkin_ws/src/robot_control/launch/shared/: aisp_vs050_1.launch  aisp_vs050_2.launch  cal_aisp_vs050_1.launch  cal_aisp_vs050_2.launch  configuration_window.launch  sas_operator_side_receiver.launch  sas_patient_side_manager.launch  sas_robot_kinematics_constrained_multiarm.launch  tele_operation_icra2023.launch  tele_operation_unified.launch
catkin_ws/src/robot_control/launch/simulation/: sim_aisp_vs050_1.launch  sim_aisp_vs050_2.launch  sim_forceps_attachment_robot.launch
catkin_ws/src/robot_control/launch/unified_model/: kinematic_model_manipulability.launch  kinematic_model_overlap_simulation.launch  kinematic_model_simulation.launch
catkin_ws/src/robot_control/msg/: CImage.msg  ImgShowMsg.msg  ROI.msg
catkin_ws/src/robot_control/robots/: densoDH_robot1_light.json  densoDH_robot2_instrument.json  denso_vs050_denso_11U473_light.json  denso_vs050_denso_11U473_light_calibrated.json  denso_vs050_denso_11U483_instrument.json  denso_vs050_denso_11U483_instrument_calibrated.json  vs050_forceps_extension.json
catkin_ws/src/robot_control/scripts/arduino/: arduino_contact_reporter_node.py
catkin_ws/src/robot_control/scripts/control_parameter_ui/: main.py
catkin_ws/src/robot_control/scripts/non_used/: autonomous_positioning.py  img_show_node.py  orbital_manipulation_debug.py  orbital_manipulation_icra_manipulability_simulation.py  orbital_manipulation_trajectory_control.py  predict_node_4K_camera.py  predict_node_USB_camera.py  store_node.py  store_node_manipulability.py  tele_operation_icra2023_ver.py  unified_kinematic_model_manipulability.py  unified_kinematic_model_simulation.py
catkin_ws/src/robot_control/scripts/non_used/practice_phantom/: practice_phantom.py
catkin_ws/src/robot_control/scripts/practice_phantom/: practice_phantom.py
catkin_ws/src/robot_control/scripts/recording_manager/: record_starter.sh
catkin_ws/src/robot_control/scripts/robot_control/: autonomous_positioning_controllers.py  autonomous_positioning_kinematics.py  eject_instruments.py  eyesurgery_controllers.py  haptic_forceps_controller.py  orbital_manipulation_debug.py  orbital_manipulation_trajectory_control.py  positioning_helper_functions.py  return_to_initial_poses.py  return_to_initial_poses_orbital.py  robot_loader.py  semi_autonomous_tele_operation.py  set_rcm_positions.py  store_node.py  store_node_for_kinematic_model_sim.py  store_node_manipulability.py  store_node_unified_tele.py  tele_operation_icra2023_ver.py  tele_operation_unified.py  unified_kinematic_model_manipulability.py  unified_kinematic_model_simulation.py
catkin_ws/src/robot_control/scripts/robot_control/eyeball/: eyeball.py
catkin_ws/src/robot_control/scripts/robot_control/eyeball/eyeball_parameter/: eyeball_parameter.py
catkin_ws/src/robot_control/scripts/robot_control/image_processing/: ROI_predict_node.py  get_positioning_points.py  keypoint_predict_node.py  predict_interface.py  predict_node_4K_camera.py  predict_node_USB_camera.py  set_converter.py  video_node.py
catkin_ws/src/robot_control/scripts/robot_control/image_processing/tools/: img_parameters.py  img_show_node.py  positioning_point_interface.py  predict_functions.py
catkin_ws/src/robot_control/scripts/robot_control/interfaces/: contact_reporter_interface.py  positioning_point_interface.py  store_interface.py  tool_pose_transmitter_interface.py
catkin_ws/src/robot_control/scripts/robot_control/kinematics/: eye_rotation_test.py  eyesurgery_VFIs.py  kinematics_functions.py  orbital_manipulation_kinematics.py
catkin_ws/src/robot_control/scripts/robot_control/kinematics/parameters/: control_parameters.py  physical_parameters.py
catkin_ws/src/robot_control/scripts/robot_control/tools/: eject_instruments.py  functions.py  return_to_initial_poses.py  return_to_initial_poses_orbital.py  robot_loader.py  store_node_for_semi_autonomous.py  store_node_unified_tele.py
catkin_ws/src/robot_control/src/: MoonshotDrillVrepRobot.cpp  MoonshotDrillVrepRobot.cpp.autosave  MoonshotDrillVrepRobot.h  jsk_demo_arduino_receiver.cpp  jsk_demo_arduino_receiver.h  jsk_demo_arduino_receiver_node.cpp  moonshot_arduino_receiver.cpp  moonshot_arduino_receiver.h  moonshot_arduino_receiver_node.cpp  moonshot_drill_robot.cpp  moonshot_drill_robot.h  moonshot_drill_robot_node.cpp
catkin_ws/src/robot_control/src/moonshot_drill_robot/: MoonshotDrillVrepRobot.py  __init__.py  moonshot_drill_robot_configuration.py
(+573 files in other folders)
